--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "cellviewer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://metanovitia.github.io/cellviewer",
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "jquery": "^3.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -14,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -24,5 +29,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
