--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://metanovitia.github.io/cellviewer",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^3.0.0-alpha.30",
     "jquery": "^3.3.1",
     "react": "^16.8.6",
