--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/lab": "^3.0.0-alpha.30",
     "jquery": "^3.3.1",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
